# ggquill

./: Cargo.toml
src/: action.rs  agent.rs  chat.rs  chat_schema.rs  chat_wrapper.rs  data.rs  director.rs  humanizer.rs  inference.rs  instructor.rs  joiner.rs  json_builder.rs  lib.rs  menu.rs  model.rs  model_type.rs  pipeline.rs  prelude.rs  scene.rs  token_string.rs  tool_call.rs
